[gd_scene load_steps=9 format=3 uid="uid://1y5xy3xsclqr"]

[ext_resource type="Script" path="res://scenes/world.gd" id="1_54e85"]
[ext_resource type="Texture2D" uid="uid://d124li4jsfipw" path="res://assets/background_2.png" id="2_ni2l5"]
[ext_resource type="Texture2D" uid="uid://dif1ailxa877n" path="res://assets/background_3.png" id="3_wb66o"]
[ext_resource type="PackedScene" uid="uid://8kn6grruy7ap" path="res://scenes/bird.tscn" id="4_pqn2j"]
[ext_resource type="FontFile" path="res://assets/PAPYRUS.TTF-1ab29425c1f90cd6af8b6cda7880ee41.fontdata" id="5_3g0f5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_msffn"]
size = Vector2(1778, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1jq6"]
size = Vector2(1778, 20)

[sub_resource type="Environment" id="Environment_otvpu"]
background_mode = 3
glow_enabled = true
glow_hdr_threshold = 0.0

[node name="world" type="Node2D"]
script = ExtResource("1_54e85")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0.7, 0.7)
motion_mirroring = Vector2(877, 0)

[node name="Background2" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_ni2l5")
centered = false

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(877, 0)

[node name="Background3" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_wb66o")
centered = false

[node name="bird" parent="." instance=ExtResource("4_pqn2j")]
position = Vector2(440, 296)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(440, 304)

[node name="obstacles" type="Node2D" parent="."]

[node name="spawners" type="Node2D" parent="."]
position = Vector2(-704, 0)

[node name="spawner_1" type="Node2D" parent="spawners"]
position = Vector2(1520, -8)

[node name="spawner_2" type="Node2D" parent="spawners"]
position = Vector2(1768, 448)

[node name="spawner_3" type="Node2D" parent="spawners"]
position = Vector2(1768, -8)

[node name="spawner_4" type="Node2D" parent="spawners"]
position = Vector2(1520, 440)

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(879, 0)
shape = SubResource("RectangleShape2D_msffn")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D"]
position = Vector2(879, 624)
shape = SubResource("RectangleShape2D_b1jq6")

[node name="score_label" type="Label" parent="."]
offset_left = 392.0
offset_top = 40.0
offset_right = 432.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("5_3g0f5")

[node name="score_label_text" type="Label" parent="."]
offset_left = 336.0
offset_top = 40.0
offset_right = 376.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("5_3g0f5")
text = "Score: "

[node name="highscore_label" type="Label" parent="."]
offset_left = 616.0
offset_top = 40.0
offset_right = 656.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("5_3g0f5")

[node name="highscore_label_text" type="Label" parent="."]
offset_left = 520.0
offset_top = 40.0
offset_right = 560.0
offset_bottom = 63.0
theme_override_fonts/font = ExtResource("5_3g0f5")
text = "HIgh Score:"

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_otvpu")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
